--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a data-scroll href="#services">Services</a>
           <div>
             <a href="#">
-              <img src="assets/logo.png" alt="" />
+              <img src="assets/logo-removebg-preview.png" alt="" />
             </a>
           </div>
           <a data-scroll href="#billing">Billing</a>
