--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
               <img src="assets/logo-removebg-preview.png" alt="" />
             </a>
           </div>
-          <a data-scroll href="#billing">Billing</a>
           <a data-scroll href="#about">About</a>
           <a data-scroll href="#contact-frank" class="contact-button"
             >Contact</a
@@ -62,38 +61,28 @@
         <div>
           <img src="assets/svg/icons8-strength-96.png" alt="" />
           <p>
-            Have an injury, discomfort or pain that is preventing you from
-            engaging in activities that you find enjoyable (e.g. walking,
-            running, sports, gardening)? We are here to get you back to just
-            that! With a thorough assessment, we determine the root cause of
-            your concern and its contributing factors in order to develop a
-            comprehensive treatment plan that will help to prevent and manage
-            future injury.
+            As adaptive as the human body is, it is nearly impossible to go through our busy lives without sustaining an injury. Unfortunately, both acute and chronic pain can prevent you from participating in activities that are meaningful to you (i.e., walking, sports, work). I am here to work with you as a team to empower you and achieve your goals, whether they be to excel as an athlete or to hold your grandchildren without pain. I will assess the musculoskeletal and neurological systems during my assessment, and together, we will create an individualized treatment plan that works best for you to help you manage and prevent injury recurrence.
           </p>
         </div>
-        <p>Concussion Management</p>
+        <p>Surgical Recovery</p>
         <div>
           <img src="assets/svg/icons8-brain-96.png" alt="" />
           <p>
-            Concussions are quite common in contact sports but often go
-            unrecognized and untreated. Here at Kumi Physio we take a
-            patient-centered approach where we provide education and
-            recommendations to the patient and their family about managing
-            concussions. This includes rehabilitation exercises, energy
-            management strategies, psychosocial considerations, and gradual
-            Return to School/Work/Play.
+            If you have recently had a surgery (i.e., rotator cuff, hip or knee replacement, etc.) or are preparing to have one, I will work with you to create a safe, effective, and evidence-based rehabilitation program. Together we will work on range of motion and strengthening exercises to accelerate your recovery.
           </p>
         </div>
-        <p>Sport Performance Optimization</p>
+        <p>Dizziness and Vertigo Treatment</p>
         <div>
           <img src="assets/svg/icons8-exercise-96.png" alt="" />
           <p>
-            Are you an individual who strives to maximize your sport
-            performance? At Kumi Physio we look at how you move and consider the
-            demands and needs of your sport(s) in order to provide
-            sport-specific physiotherapy and training. Sport-specific
-            strengthening and power exercises, mobility and agility drills, and
-            cross-training will be incorporated to optimize performance.
+            When it feels like the world is spinning, it can be quite challenging to complete even the simplest daily tasks. I will conduct a thorough neurological and vestibular assessment to find the source of your dizziness, and create an effective treatment program that works for you.
+          </p>
+        </div>
+        <p>Chronic Headache Management</p>
+        <div>
+          <img src="assets/svg/icons8-exercise-96.png" alt="" />
+          <p>
+            Do you suffer from chronic tension headaches or migraines? The source of most headaches can occur from the muscles, joints and/or nerves within the neck, jaw and shoulder(s). I will do a thorough examination to evaluate the cause of your headaches and will develop an effective exercise routine to reduce the frequency and alleviate your headaches.
           </p>
         </div>
       </div>
@@ -104,85 +93,51 @@
     <section class="padding-top alternative-section-bg" id="del-services">
       <h2>Delivery of Services</h2>
       <div class="del-services wrapper padding-bottom">
-        <p>Telerehabilitation</p>
+        <p>In-Person</p>
         <div>
           <img src="assets/svg/icons8-virtual-machine-96.png" alt="" />
           <p>
-            Assessments and treatments are delivered virtually using a secure
-            video conferencing platform. This convenient method reduces the need
-            to travel and allows for flexible booking times.
+            Clients within Orillia, Barrie, and Simcoe regions can be assessed and treated in-person, within the clinic. Before coming into the clinic, we will gather your contact information and provide a COVID-19 pre-screen to maintain appropriate infection control standards and procedures.
           </p>
         </div>
-        <p>In-Home</p>
+        <p>Tele-Health </p>
         <div>
           <img src="assets/svg/icons8-home-96.png" alt="" />
           <p>
-            Clients within the Guelph region are able to have our
-            physiotherapist assess and treat from the convenience of their home.
-            All necessary equipment will be brought to your appointment.
+            Initial assessments and follow-up treatment appointments are delivered virtually using a video conferencing platform that complies with the privacy requirements set out by the College of Physiotherapists of Ontario.
           </p>
         </div>
-        <p>In-Clinic</p>
+        <p>Direct billing</p>
         <div>
           <img src="assets/svg/icons8-physical-therapy-96.png" alt="" />
           <p>
-            Physiotherapy assessments and treatments provided in person at our
-            clinic.
+            We electronically submit claims and directly bill to most insurance companies to offer convenience for clients. Please contact your insurance company to access information regarding your coverage.
           </p>
         </div>
       </div>
     </section>
 
-    <!-- Billing  -->
-    <div class="section-bg padding-top padding-bottom">
-      <section class="billing wrapper" id="billing">
-        <div class="billing-container">
-          <img src="assets/svg/icons8-online-money-transfer-96.png" alt="" />
-          <h2>Direct Billing</h2>
-        </div>
-        <div class="billing-text-container">
-          <p>
-            Kumi Physio offers convenient invoicing for our clients. We are able
-            to electronically submit claims to most insurance companies. Please
-            contact your insurance company directly to access information about
-            your policy and coverage.
-          </p>
-        </div>
-      </section>
-    </div>
-
     <!-- About -->
 
     <section class="padding alternative-section-bg" id="about">
       <div class="wrapper">
-        <h2>Meet Frank</h2>
+        <h2>Bio and Education: Meet Matt</h2>
         <div class="about">
           <div>
             <img src="assets/2020-05-15 09_29_54-Kumi Physio.png" alt="" />
-            <h4>Frank Kumi, MScPT, B.Kin</h4>
-            <h4>Registered Physiotherapist</h4>
           </div>
           <div class="frank-text">
             <p>
-              Frank Kumi grew up in Toronto playing competitive soccer and
-              basketball. Frank was drawn into the rehabilitation community
-              after going through several injuries himself. After completing his
-              Bachelor of Science Degree in Kinesiology from York University,
-              Frank obtained a Master of Science Degree in Physical Therapy from
-              Queen’s University. Frank has furthered his clinical education by
-              completing courses on Post-Concussion Management, Level 1 Manual
-              Therapy, Soft Tissue Release, Acupuncture, and Pain Neuroscience
-              education.
+              Matt began his academic journey at Carleton University, graduating in 2015 with a Bachelor of Science degree in Neuroscience and Mental Health. He then completed his Master of Science degree within the field of Neuroscience at Queen’s University in 2017, exploring how eye movements can be used as a potential biomarker to diagnose and assess neurological disorders, such as Alzheimer’s disease. He was awarded the prestigious Frederick Banting and Charles Best Canada Graduate Scholarship for his research and accomplishments.
             </p>
             <p>
-              Frank encourages an active approach to treatment by providing his
-              clients with the education and exercises necessary to take control
-              of their injury, as well as supplementing it with manual therapy
-              as needed. As a lover of sports, you can find Frank playing
-              basketball, soccer, volleyball, or working out when not at the
-              clinic. Frank looks forward to building a strong therapeutic
-              alliance with his clients and empowering them to achieve their
-              goals!
+              After completing his thesis, Matt pursued a second Master of Science degree in Physical Therapy at Queen’s University, graduating in 2019. Matt has furthered his clinical training by completing courses in soft tissue release, advanced manual therapy, pain neuroscience, and vestibular rehabilitation techniques.
+            </p>
+            <p>
+              Matt has a special interest in treating a wide variety of clients, ranging from elite athletes to clients suffering from debilitating chronic pain. He also has experience treating clients suffering from vertigo, cervicogenic headaches, running injuries, and lower back pain, both acute and chronic.
+            </p>
+            <p>
+              Matt is passionate about accelerating his clients’ recovery from injury. He values compassion, always striving to understand his client’s values and individualizes their rehabilitation to suit their functional needs and goals. He strives to implement evidence-informed techniques into his practice, remaining up to date on effective treatment strategies and educational approaches. When not at work, Matt loves to be outdoors camping, fishing, golfing and lifting weights.
             </p>
           </div>
         </div>
@@ -192,7 +147,7 @@
     <!-- Credentials -->
 
     <section class="section-bg padding">
-      <div class="wrapper credentials">
+      <div class="credentials">
         <div>
           <a href="https://www.yorku.ca/index.html" target="blank">
             <img src="assets/yorku.png" alt="" />
@@ -220,16 +175,16 @@
 
     <section class="contact padding alternative-section-bg" id="contact-frank">
       <div class="wrapper">
-        <p class="center zero-margin">Contact Us</p>
+        <p class="center zero-margin">Contact Me</p>
         <h2>Get in Touch</h2>
         <div class="flex">
           <div>
-            <p>We are currently accepting new patients.</p>
+            <p>I am currently accepting new clients</p>
             <p>
-              Please fill in your contact information and we will get back to
-              you shortly.
+              Please fill in your contact information and I will get back to you in a timely manner
             </p>
-            <p>We look forward to hearing from you soon!</p>
+            <p>I look forward to hearing from you and meeting you soon!
+            </p>
           </div>
           <div>
             <form action="https://formspree.io/mjvagkar" method="POST">
@@ -260,30 +215,25 @@
     <div class="section-bg">
       <footer class="wrapper padding-top padding-bottom">
         <div>
-          <h4>Location</h4>
-          <p>702-364 Waterloo Avenue</p>
-          <p>Guelph, ON</p>
-          <p>N1H 3K2</p>
-          <a href="https://goo.gl/maps/xUGuYVCPRveqv1E18" target="blank"
+          <h4>Clinic Location and Name</h4>
+          <p>Orillia Synergy Healthcare Group</p>
+          <p>129 Front Street South</p>
+          <p>Orillia, ON</p>
+          <p>L3V 4S6</p>
+          <a href="https://www.google.com/maps/place/Synergy+Healthcare+Group/@44.6065138,-79.4117341,15z/data=!4m5!3m4!1s0x0:0x1985f42fbb9619e2!8m2!3d44.6065138!4d-79.4117341" target="blank"
             >View Map</a
           >
         </div>
         <div>
           <h4>Phone</h4>
-          <p>416-818-3563</p>
+          <p>705-329-1090</p>
           <h4>Email</h4>
           <p>Kumiphysiotherapy@gmail.com</p>
         </div>
         <div class="stay-conntected">
           <h4>Stay Connected</h4>
-          <a href="https://www.facebook.com/kumiphysio" target="blank"
-            ><img src="assets/svg/icons8-facebook-circled-96.png" alt=""
-          /></a>
-          <a href="https://www.instagram.com/kumiphysio/" target="blank"
-            ><img src="assets/svg/icons8-instagram-96.png" alt=""
-          /></a>
           <a
-            href=" https://www.linkedin.com/in/frank-kumi-26756a176/"
+            href="https://www.linkedin.com/in/matthew-smorenburg-pt-17a386100/"
             target="blank"
             ><img src="assets/svg/icons8-linkedin-circled-96.png" alt=""
           /></a>
@@ -292,7 +242,7 @@
     </div>
 
     <div class="copyright">
-      <p class="wrapper">Copyright © 2020 Kumi Physio</p>
+      <p class="wrapper">Copyright © 2020 Smorenburg Physiotherapy</p>
     </div>
   </body>
   <script src="js/smooth-scroll.polyfills.min.js"></script>
