--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
 
     <header class="alternative-section-bg">
       <div class="header-image-container">
-        <img class="bottom" src="assets/background-images/4.jpg" alt="" />
-        <img class="middle" src="assets/background-images/5.jpg" alt="" />
-        <img class="top" src="assets/background-images/6.jpg" alt="" />
+        <img src="assets/background-images/collage2.png" alt="" />
       </div>
       <div class="header-image-text">
         <h2>Stay Moving</h2>
@@ -57,32 +55,54 @@
     <section class="section-bg padding-top" id="services">
       <h2>Services</h2>
       <div class="services wrapper padding-bottom">
-        <p>Injury Rehabilitation and Pain Management</p>
+        <p>Injury Rehabilitation and Prevention</p>
         <div>
           <img src="assets/svg/icons8-strength-96.png" alt="" />
           <p>
-            As adaptive as the human body is, it is nearly impossible to go through our busy lives without sustaining an injury. Unfortunately, both acute and chronic pain can prevent you from participating in activities that are meaningful to you (i.e., walking, sports, work). I am here to work with you as a team to empower you and achieve your goals, whether they be to excel as an athlete or to hold your grandchildren without pain. I will assess the musculoskeletal and neurological systems during my assessment, and together, we will create an individualized treatment plan that works best for you to help you manage and prevent injury recurrence.
+            As adaptive as the human body is, it is nearly impossible to go
+            through our busy lives without sustaining an injury. Unfortunately,
+            both acute and chronic pain can prevent you from participating in
+            activities that are meaningful to you (i.e., walking, sports, work).
+            I am here to work with you as a team to empower you and achieve your
+            goals, whether they be to excel as an athlete or to hold your
+            grandchildren without pain. I will assess the musculoskeletal and
+            neurological systems during my assessment, and together, we will
+            create an individualized treatment plan that works best for you to
+            help you manage and prevent injury recurrence.
           </p>
         </div>
         <p>Surgical Recovery</p>
         <div>
           <img src="assets/svg/icons8-brain-96.png" alt="" />
           <p>
-            If you have recently had a surgery (i.e., rotator cuff, hip or knee replacement, etc.) or are preparing to have one, I will work with you to create a safe, effective, and evidence-based rehabilitation program. Together we will work on range of motion and strengthening exercises to accelerate your recovery.
+            If you have recently had a surgery (i.e., rotator cuff, hip or knee
+            replacement, etc.) or are preparing to have one, I will work with
+            you to create a safe, effective, and evidence-based rehabilitation
+            program. Together we will work on range of motion and strengthening
+            exercises to accelerate your recovery.
           </p>
         </div>
         <p>Dizziness and Vertigo Treatment</p>
         <div>
           <img src="assets/svg/icons8-exercise-96.png" alt="" />
           <p>
-            When it feels like the world is spinning, it can be quite challenging to complete even the simplest daily tasks. I will conduct a thorough neurological and vestibular assessment to find the source of your dizziness, and create an effective treatment program that works for you.
+            When it feels like the world is spinning, it can be quite
+            challenging to complete even the simplest daily tasks. I will
+            conduct a thorough neurological and vestibular assessment to find
+            the source of your dizziness, and create an effective treatment
+            program that works for you.
           </p>
         </div>
         <p>Chronic Headache Management</p>
         <div>
-          <img src="assets/svg/icons8-exercise-96.png" alt="" />
+          <img src="assets/svg/image21.png" alt="" />
           <p>
-            Do you suffer from chronic tension headaches or migraines? The source of most headaches can occur from the muscles, joints and/or nerves within the neck, jaw and shoulder(s). I will do a thorough examination to evaluate the cause of your headaches and will develop an effective exercise routine to reduce the frequency and alleviate your headaches.
+            Do you suffer from chronic tension headaches or migraines? The
+            source of most headaches can occur from the muscles, joints and/or
+            nerves within the neck, jaw and shoulder(s). I will do a thorough
+            examination to evaluate the cause of your headaches and will develop
+            an effective exercise routine to reduce the frequency and alleviate
+            your headaches.
           </p>
         </div>
       </div>
@@ -97,21 +117,30 @@
         <div>
           <img src="assets/svg/icons8-virtual-machine-96.png" alt="" />
           <p>
-            Clients within Orillia, Barrie, and Simcoe regions can be assessed and treated in-person, within the clinic. Before coming into the clinic, we will gather your contact information and provide a COVID-19 pre-screen to maintain appropriate infection control standards and procedures.
+            Clients within Orillia, Barrie, and Simcoe regions can be assessed
+            and treated in-person, within the clinic. Before coming into the
+            clinic, we will gather your contact information and provide a
+            COVID-19 pre-screen to maintain appropriate infection control
+            standards and procedures.
           </p>
         </div>
-        <p>Tele-Health </p>
+        <p>Tele-Health</p>
         <div>
           <img src="assets/svg/icons8-home-96.png" alt="" />
           <p>
-            Initial assessments and follow-up treatment appointments are delivered virtually using a video conferencing platform that complies with the privacy requirements set out by the College of Physiotherapists of Ontario.
+            Initial assessments and follow-up treatment appointments are
+            delivered virtually using a video conferencing platform that
+            complies with the privacy requirements set out by the College of
+            Physiotherapists of Ontario.
           </p>
         </div>
         <p>Direct billing</p>
         <div>
           <img src="assets/svg/icons8-physical-therapy-96.png" alt="" />
           <p>
-            We electronically submit claims and directly bill to most insurance companies to offer convenience for clients. Please contact your insurance company to access information regarding your coverage.
+            We electronically submit claims and directly bill to most insurance
+            companies to offer convenience for clients. Please contact your
+            insurance company to access information regarding your coverage.
           </p>
         </div>
       </div>
@@ -128,16 +157,40 @@
           </div>
           <div class="frank-text">
             <p>
-              Matt began his academic journey at Carleton University, graduating in 2015 with a Bachelor of Science degree in Neuroscience and Mental Health. He then completed his Master of Science degree within the field of Neuroscience at Queen’s University in 2017, exploring how eye movements can be used as a potential biomarker to diagnose and assess neurological disorders, such as Alzheimer’s disease. He was awarded the prestigious Frederick Banting and Charles Best Canada Graduate Scholarship for his research and accomplishments.
+              Matt began his academic journey at Carleton University, graduating
+              in 2015 with a Bachelor of Science degree in Neuroscience and
+              Mental Health. He then completed his Master of Science degree
+              within the field of Neuroscience at Queen’s University in 2017,
+              exploring how eye movements can be used as a potential biomarker
+              to diagnose and assess neurological disorders, such as Alzheimer’s
+              disease. He was awarded the prestigious Frederick Banting and
+              Charles Best Canada Graduate Scholarship for his research and
+              accomplishments.
             </p>
             <p>
-              After completing his thesis, Matt pursued a second Master of Science degree in Physical Therapy at Queen’s University, graduating in 2019. Matt has furthered his clinical training by completing courses in soft tissue release, advanced manual therapy, pain neuroscience, and vestibular rehabilitation techniques.
+              After completing his thesis, Matt pursued a second Master of
+              Science degree in Physical Therapy at Queen’s University,
+              graduating in 2019. Matt has furthered his clinical training by
+              completing courses in soft tissue release, advanced manual
+              therapy, pain neuroscience, and vestibular rehabilitation
+              techniques.
             </p>
             <p>
-              Matt has a special interest in treating a wide variety of clients, ranging from elite athletes to clients suffering from debilitating chronic pain. He also has experience treating clients suffering from vertigo, cervicogenic headaches, running injuries, and lower back pain, both acute and chronic.
+              Matt has a special interest in treating a wide variety of clients,
+              ranging from elite athletes to clients suffering from debilitating
+              chronic pain. He also has experience treating clients suffering
+              from vertigo, cervicogenic headaches, running injuries, and lower
+              back pain, both acute and chronic.
             </p>
             <p>
-              Matt is passionate about accelerating his clients’ recovery from injury. He values compassion, always striving to understand his client’s values and individualizes their rehabilitation to suit their functional needs and goals. He strives to implement evidence-informed techniques into his practice, remaining up to date on effective treatment strategies and educational approaches. When not at work, Matt loves to be outdoors camping, fishing, golfing and lifting weights.
+              Matt is passionate about accelerating his clients’ recovery from
+              injury. He values compassion, always striving to understand his
+              client’s values and individualizes their rehabilitation to suit
+              their functional needs and goals. He strives to implement
+              evidence-informed techniques into his practice, remaining up to
+              date on effective treatment strategies and educational approaches.
+              When not at work, Matt loves to be outdoors camping, fishing,
+              golfing and lifting weights.
             </p>
           </div>
         </div>
@@ -181,10 +234,10 @@
           <div>
             <p>I am currently accepting new clients</p>
             <p>
-              Please fill in your contact information and I will get back to you in a timely manner
+              Please fill in your contact information and I will get back to you
+              in a timely manner
             </p>
-            <p>I look forward to hearing from you and meeting you soon!
-            </p>
+            <p>I look forward to hearing from you and meeting you soon!</p>
           </div>
           <div>
             <form action="https://formspree.io/mjvagkar" method="POST">
@@ -220,7 +273,9 @@
           <p>129 Front Street South</p>
           <p>Orillia, ON</p>
           <p>L3V 4S6</p>
-          <a href="https://www.google.com/maps/place/Synergy+Healthcare+Group/@44.6065138,-79.4117341,15z/data=!4m5!3m4!1s0x0:0x1985f42fbb9619e2!8m2!3d44.6065138!4d-79.4117341" target="blank"
+          <a
+            href="https://www.google.com/maps/place/Synergy+Healthcare+Group/@44.6065138,-79.4117341,15z/data=!4m5!3m4!1s0x0:0x1985f42fbb9619e2!8m2!3d44.6065138!4d-79.4117341"
+            target="blank"
             >View Map</a
           >
         </div>
