--- a/index.html
+++ b/index.html
@@ -155,16 +155,40 @@
           </div>
           <div class="frank-text">
             <p>
-              Matt began his academic journey at Carleton University, graduating in 2015 with a Bachelor of Science degree in Neuroscience and Mental Health. He then completed his Master of Science degree within the field of Neuroscience at Queen’s University in 2017, exploring how eye movements can be used as a potential biomarker to diagnose and assess neurological disorders, such as Alzheimer’s disease. He was awarded the prestigious Frederick Banting and Charles Best Canada Graduate Scholarship for his research and accomplishments.
+              Matt began his academic journey at Carleton University, graduating
+              in 2015 with a Bachelor of Science degree in Neuroscience and
+              Mental Health. He then completed his Master of Science degree
+              within the field of Neuroscience at Queen’s University in 2017,
+              exploring how eye movements can be used as a potential biomarker
+              to diagnose and assess neurological disorders, such as Alzheimer’s
+              disease. He was awarded the prestigious Frederick Banting and
+              Charles Best Canada Graduate Scholarship for his research and
+              accomplishments.
             </p>
             <p>
-              After completing his thesis, Matt pursued a second Master of Science degree in Physical Therapy at Queen’s University, graduating in 2019. Matt has furthered his clinical training by completing courses in soft tissue release, advanced manual therapy, dry needling/acupuncture, pain neuroscience, and vestibular rehabilitation techniques.
+              After completing his thesis, Matt pursued a second Master of
+              Science degree in Physical Therapy at Queen’s University,
+              graduating in 2019. Matt has furthered his clinical training by
+              completing courses in soft tissue release, advanced manual
+              therapy, dry needling/acupuncture, pain neuroscience, and
+              vestibular rehabilitation techniques.
             </p>
             <p>
-              Matt has a special interest in treating a wide variety of clients, ranging from elite athletes to clients suffering from debilitating chronic pain. He also has experience treating clients suffering from vertigo, cervicogenic headaches, running injuries, and lower back pain, both acute and chronic.
+              Matt has a special interest in treating a wide variety of clients,
+              ranging from elite athletes to clients suffering from debilitating
+              chronic pain. He also has experience treating clients suffering
+              from vertigo, cervicogenic headaches, running injuries, and lower
+              back pain, both acute and chronic.
             </p>
             <p>
-              Matt is passionate about accelerating his clients’ recovery from injury. He values compassion, always striving to understand his client’s values and individualizes their rehabilitation to suit their functional needs and goals. He strives to implement evidence-informed techniques into his practice, remaining up to date on effective treatment strategies and educational approaches. When not at work, Matt loves to be outdoors camping, fishing, golfing and lifting weights.
+              Matt is passionate about accelerating his clients’ recovery from
+              injury. He values compassion, always striving to understand his
+              client’s values and individualizes their rehabilitation to suit
+              their functional needs and goals. He strives to implement
+              evidence-informed techniques into his practice, remaining up to
+              date on effective treatment strategies and educational approaches.
+              When not at work, Matt loves to be outdoors camping, fishing,
+              golfing and lifting weights.
             </p>
           </div>
         </div>
@@ -247,7 +271,6 @@
           <p>129 Front Street South</p>
           <p>Orillia, ON</p>
           <p>L3V 4S6</p>
-          <p><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11362.144215367067!2d-79.4117341!3d44.6065138!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1985f42fbb9619e2!2sSynergy%20Healthcare%20Group!5e0!3m2!1sen!2sca!4v1595453206941!5m2!1sen!2sca" width="400" height="550" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></p>
         </div>
         <div>
           <h4>Phone</h4>
@@ -264,10 +287,26 @@
           /></a>
         </div>
       </footer>
+      <div class="wrapper">
+        <p>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11362.144215367067!2d-79.4117341!3d44.6065138!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1985f42fbb9619e2!2sSynergy%20Healthcare%20Group!5e0!3m2!1sen!2sca!4v1595453206941!5m2!1sen!2sca"
+            width="1200"
+            height="300"
+            frameborder="0"
+            style="border: 0; margin: 0 auto;"
+            allowfullscreen=""
+            aria-hidden="false"
+            tabindex="0"
+          ></iframe>
+        </p>
+      </div>
     </div>
 
     <div class="copyright">
-      <p class="wrapper">Copyright © 2020 Smorenburg Physiotherapy</p>
+      <p class="wrapper" style="color: white;">
+        Copyright © 2020 Smorenburg Physiotherapy
+      </p>
     </div>
   </body>
   <script src="js/smooth-scroll.polyfills.min.js"></script>
