--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         </div>
       </footer>
       <div class="wrapper">
-        <p>
+        <div class="iframe-container">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11362.144215367067!2d-79.4117341!3d44.6065138!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1985f42fbb9619e2!2sSynergy%20Healthcare%20Group!5e0!3m2!1sen!2sca!4v1595453206941!5m2!1sen!2sca"
             width="1200"
@@ -299,7 +299,7 @@
             aria-hidden="false"
             tabindex="0"
           ></iframe>
-        </p>
+        </div>
       </div>
     </div>
 
